# quindar-tones

./: README.md  README.rst  keytones.py  makeQuindarTones.py  pyproject.toml  setup.cfg  setup.py
archive/: pynput_keypress_example.py
quindar_tones/: __init__.py
