[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "quindar_tones"
author = "Michael Hirsch, Ph.D."
author-email = "scivision@users.noreply.github.com"
home-page = "https://github.com/scivision/quindar-tones"

requires=['pygame','numpy']
requires-python='>=2.7'

description-file='README.rst'
classifiers=[
'Development Status :: 4 - Beta',
'License :: OSI Approved :: MIT License',
'Programming Language :: Python']

