[metadata]
name = quindar_tones
version = 0.7.0
author = Michael Hirsch, Ph.D.
description = Play Nextel, Quindar, Tone Remote tones
url = https://github.com/scivision/quindar-tones
keywords =
  quindar
  nasa
  tone remote
  two-way radio
  motorola
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Multimedia :: Sound/Audio :: Sound Synthesis
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  numpy
  pygame

[options.extras_require]
tests =
  pytest
  flake8
  mypy

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
